dh-python (5.20211022.1) UNRELEASED; urgency=medium

  * dhpython/debhelper.py: Ignore trailing newlines in debian/control
    (closes: 996995)

 -- Stefano Rivera <stefanor@debian.org>  Fri, 22 Oct 2021 12:48:40 -0700

dh-python (5.20211022) unstable; urgency=medium

  * pybuild distutils plugin: Use underscore separated keys in
    pydistutils.cfg, following setuptools 54.1's deprecation of
    dash-separation.
  * dhpython/debhelper.py: Don't consider two blank lines to be an empty
    paragraph. (closes: 996995)

 -- Stefano Rivera <stefanor@debian.org>  Fri, 22 Oct 2021 11:15:23 -0700

dh-python (5.20211021) unstable; urgency=medium

  * dh_python3(1): Clarify where the dependencies come from. (closes: 930950)
  * Rewrite dhpython/debhelper.py's debian/control parsing to do 2 passes and
    avoid relying on conventional field order. (closes: 996949)
  * Parse Build-Depends-Arch too, when making assumptions based on
    Build-Depends.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 21 Oct 2021 14:59:28 -0700

dh-python (5.20211016.1) unstable; urgency=medium

  * Unset DH_INTERNAL_OPTIONS= in the package-building test suites, to fix
    FTBFS on the arch:all buildd.

 -- Stefano Rivera <stefanor@debian.org>  Sat, 16 Oct 2021 13:30:33 -0700

dh-python (5.20211016) unstable; urgency=medium

  [ Piotr Ożarowski ]
  * DEB_BUILD_PROFILES=nocheck will skip test step in pybuild
    (just like DEB_BUILD_OPTIONS=nocheck already does)

  [ Stefano Rivera ]
  * Add support for 2-digit python minor versions (3.10). Parse sonames and
    generate dependencies, correctly. Thanks Graham Inggs.
  * Version Breaks: python to allow dh-python to be co-installed with
    python-is-python2, thanks Stephen Kitt. (closes: 991009)
  * Remove build path from RECORD files, thanks Philip Rinn (closes: 969352)
  * Add integration test coverage for pybuild and flit.
  * flit: Remove direct_url.json from .dist-info, not reproducible and
    doesn't contain any useful information.